# pypsa-studio

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  roadmap.md  rxconfig.py  test.bat
.codex/skills/commit/: SKILL.md
docs/: LICENSE.md  README.md  coverpage.md  index.html
doks/: README.md  coverpage.md  index.html
pypsa_network_builder_v2/: pypsa_network_builder_v2.py
pypsa_network_builder_v2/components/: __init__.py  react_flow_canvas.jsx  react_flow_canvas.py
pypsa_network_builder_v2/network_model/: __init__.py  pypsa_components.py  pypsa_network_exporter.py  pypsa_network_loader.py
pypsa_network_builder_v2/routers/: __init__.py  builtin.py  registry.py
pypsa_studio/: constants.py  pypsa_studio.py  state.py  types.py
pypsa_studio/components/: __init__.py  react_flow_canvas.jsx  react_flow_canvas.py
pypsa_studio/network_model/: __init__.py  pypsa_components.py  pypsa_network_exporter.py  pypsa_network_loader.py
pypsa_studio/routers/: __init__.py  base.py  builtin.py  registry.py
pypsa_studio/services/: __init__.py
pypsa_studio/ui/: __init__.py  builder.py  catalog.py  dialogs.py  layout.py  menus.py  scripts.py  styles.py
test_networks/: buses.csv  links.csv  loads.csv  network.csv  pypsa_network_builder_layout.json
test_networks/debug_network/: generators.csv  lines.csv  shunt_impedances.csv  storage_units.csv  stores.csv  transformers.csv
test_networks/pypsa_scraped/: scrape_pypsa_example.py
tests/: test_network_model.py  test_state_helpers.py
tests/js/: canvas_helpers.test.mjs
(+175 files in other folders)
