[project]
name = "pypsa-network-builder-v2"
version = "0.1.0"
description = "PyPSA drag an drop network builder"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "plotly>=6.8.0",
    "reflex>=0.9.5.post2",
    "pypsa==1.2.3",
    "tables>=3.11.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pyinstaller>=6.21.0",
    "pre-commit>=4.0.0",
]
