[project]
name = "pypsa-studio"
version = "0.1.0"
description = "Build, import and export PyPSA networks. Run in Jupyter."
readme = "README.md"
requires-python = ">=3.12,!=3.14.1"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.6.0",
    "plotly>=6.8.0",
    "reflex>=0.9.6.post1",
    "pypsa==1.2.4",
    "tables>=3.11.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.0.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
